--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="about-img">
-                        <img src="./img/about.png" alt="">
+                        <img src="./img/about.png" class="img-fluid" alt="">
                     </div>
                 </div>
                 <div class="col-md-6 mt-5">
